- [Storage] Added support for modifying already existing files - [Storage] Added preview support for audio / video files - [Storage] Added icon recognition for `.css`, `.html`, `.js`, `.json`, `.txt`, `.ts` - [Storage] Added upload size check to filepaste - [Storage] Added notifying the user if the filepaste is too large for editing - [Storage] Fixed directory listing view not cleaning up Svelte Actions - [Storage] Removed some leftover code

--- a/packages/@ark-storage/.env.example
+++ b/packages/@ark-storage/.env.example
@@ -19,6 +19,8 @@ VITE_LOCALE_DEFAULT="en-US"
 VITE_META_TITLE="Ark Storage :: Simplistic Personal File Sharing, in a Nutshell"
 VITE_META_URL="http://localhost:3000"
 
+VITE_MODIFIABLE_MAX_FILESIZE="25 MiB"
+
 VITE_PASTE_PREFIX="paste."
 
 VITE_PREVIEW_MAX_FILESIZE="25 MiB"
