- [Storage] Added text file modification - [Storage] Implemented functionality for pagination UI (not actual background) - [Storage] Updated UI where unknown mime type is displays as `application/octet-stream` instead of `N/A` to match Supabase - [Storage] Added footer to storage view to display directory / file count

--- a/packages/@ark-storage/package.json
+++ b/packages/@ark-storage/package.json
@@ -37,6 +37,7 @@
     "dependencies": {
         "@kahi-ui/framework": "github:novacbn/kahi-ui",
         "@kahi-ui/svelte": "github:novacbn/kahi-ui-svelte",
+        "svelte-codejar": "github:novacbn/svelte-codejar#0.0.2",
         "svelte-feather": "github:novacbn/svelte-feather",
         "xbytes": "^1.7.0"
     }
