- [Storage] Migrated to `svelte-image-crop` - [Storage] Migrated to SvelteKit `next.107` - [Storage] Revamped page auth handling - [Storage] Added unauthenticated and timeout states to login page - [Storage] Renamed `/storage` routed dialogs to be prefixed with `Storage` - [Storage] Updated `TextDialog` with a readonly mode - [Storage] Updated all Supabase file views to use `last_accessed_at` for modification timestamp - [Storage] Updated filepaste to cancel on prompt dismiss - [Storage] Cleaned up `/storage` querying and directory watching - [Storage] Added timestamps to preview URLs to support reactive image reloading

--- a/packages/@ark-storage/package.json
+++ b/packages/@ark-storage/package.json
@@ -16,7 +16,7 @@
     "devDependencies": {
         "@supabase/supabase-js": "^1.11.9",
         "@sveltejs/adapter-node": "^1.0.0-next.20",
-        "@sveltejs/kit": "^1.0.0-next.104",
+        "@sveltejs/kit": "^1.0.0-next.107",
         "@types/cookie": "^0.4.0",
         "@types/ms": "^0.7.31",
         "@types/pino": "^6.3.7",
@@ -32,13 +32,14 @@
         "tslib": "^2.1.0",
         "typescript": "^4.2.3",
         "ulid": "^2.3.0",
-        "vite": "^2.1.5"
+        "vite": "^2.3.2"
     },
     "dependencies": {
-        "@kahi-ui/framework": "github:novacbn/kahi-ui",
-        "@kahi-ui/svelte": "github:novacbn/kahi-ui-svelte",
-        "svelte-codejar": "github:novacbn/svelte-codejar#0.0.2",
-        "svelte-feather": "github:novacbn/svelte-feather",
+        "@kahi-ui/framework": "file:../../../kahi-ui.nbn.dev/kahi-ui",
+        "@kahi-ui/svelte": "file:../../../kahi-ui.nbn.dev/kahi-ui-svelte",
+        "@novacbn/svelte-image-crop": "github:novacbn/svelte-image-crop#0.0.2",
+        "svelte-codejar": "github:novacbn/svelte-codejar#0.0.3",
+        "svelte-feather": "file:../../../kahi-ui.nbn.dev/svelte-feather/svelte-feather",
         "xbytes": "^1.7.0"
     }
 }
